media querry for about me section

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -2,19 +2,22 @@
     <div class="content-wrapper">
         <div class="left-content">
             <div class="headline">
-                <h1 class="white-space-nowrap">Let's work</h1> <h1>together</h1>
+                <h1 class="white-space-nowrap">Let's work</h1>
+                <h1>together</h1>
                 <h2>I am</h2>
             </div>
             <div class="icons-section">
-                <img src="./../../../assets/img/location-icon.png" alt="Location Icon">
-                <span>located in Thuringia</span>
-                <img src="./../../../assets/img/remote-icon.png" alt="Remote Icon">
-                <span>open to work remote</span>
+                <div> <img src="./../../../assets/img/location-icon.png" alt="Location Icon">
+                    <span>located in Thuringia</span>
+                </div>
+                <div> <img src="./../../../assets/img/remote-icon.png" alt="Remote Icon">
+                    <span>open to work remote</span>
+                </div>
             </div>
         </div>
         <div class="right-content">
             <div class="text-content">
-                <span> Hi, I'm a German-speaking Frontend Developer based near Erfurt. I'm driven by the endless
+                <span> Hi, I'm a Frontend Developer based near Erfurt. I'm driven by the endless
                     possibilities in
                     IT, and
                     I'm passionate about creating visually stunning and user-friendly websites and applications. <br>My
