--- a/src/app/main-content/skills/skills.component.scss
+++ b/src/app/main-content/skills/skills.component.scss
@@ -54,15 +54,27 @@ h1 {
 
 @media (max-width:730px){
     img {
-        width: 50px;
-        margin-bottom: 10px;
+        width: 50px !important;
     }
 }
 
 @media (max-width:580px){
+
+    h1 {
+        font-size: 4rem;
+    }
+
     img {
-        width: 5px;
-        margin-bottom: 10px;
+        width: 40px !important;
     }
 }
 
+@media (max-width:389px){
+    img {
+        width: 30px !important;
+    }
+
+    span {
+        font-size: 0.7rem;
+    }
+}
