media querry contact section

--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -3,13 +3,13 @@ section {
     justify-content: center;
     width: 100%;
     background-image: url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png');
-    background-size: 8%, 3%, 10%;
+    background-size: 8%, 3%, 6%;
     background-position:
         70% 5%,
         85% 95%,
         20% 80%;
     background-repeat: no-repeat;
-    background: linear-gradient(to bottom, #FFFFFF, #EAF0FF);
+    // background: linear-gradient(to bottom, #FFFFFF, #EAF0FF);
 
     h1 {
         font-family: 'Baloo 2';
@@ -29,13 +29,13 @@ section {
         color: #5988FF;
         font-family: 'Montserrat';
         font-weight: 400;
-        font-size: 1rem; 
+        font-size: 1rem;
     }
 
     p {
         color: black;
         font-family: 'Montserrat';
-        font-size: 1rem; 
+        font-size: 1rem;
         font-weight: 400;
     }
 
@@ -63,13 +63,13 @@ section {
 span {
     font-family: 'Montserrat';
     color: red;
-    font-size: 1rem; 
+    font-size: 1rem;
 }
 
 p {
     color: black;
     font-weight: 400;
-    font-size: 1rem; 
+    font-size: 1rem;
 }
 
 form {
@@ -142,3 +142,59 @@ a {
         font-weight: bold;
     }
 }
+
+@media (max-width:1605px) {
+    button {
+        margin-top: 20px !important;
+    }
+}
+
+@media (max-width:800px) {
+    h1 {
+        font-size: 4rem !important;
+    }
+
+    h2 {
+        font-size: 1.5rem !important;
+    }
+
+    button {
+        font-size: 1rem !important;
+        margin-top: 20px !important;
+    }
+
+    .contact-wrapper {
+        margin-left: 3%;
+        margin-right: 3%;
+    }
+}
+
+@media(max-width:600px) {
+
+    .content {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .left-content {
+        width: 100%;
+        margin-right: 0%;
+    }
+
+    form {
+        width: 100%;
+        margin-top: 50px;
+        margin-bottom: 50px;
+    }
+
+    button {
+        margin-top: 30px;
+    }
+
+    section {
+        background-image: url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png');
+        background-size: 15%, 6%;
+        background-position:
+            70% 5%,
+            85% 95%,
+}}
