--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -10,8 +10,8 @@
                     contributing to your projects with my work.
                 </p> <br>
                 <h3>Need a Frontend developer? <b>Contact me!</b></h3>
-                <a href="#header"> <img src="./../../../assets/img/arrow-top-icon.png" alt="Arrow top">
-                </a>
+                <!-- <a href="#header"> <img src="./../../../assets/img/arrow-top-icon.png" alt="Arrow top">
+                </a> -->
             </div>
             <form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
                 <input #name="ngModel" [(ngModel)]="contactData.name" name="name" type="text" id="name"
