--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,22 +1,25 @@
 <footer>
     <div class="footer-content">
-        <div class="footer-left">
-            <a href="#header"><img class="logo" src="./../../../../assets/img/logo.png" alt="Logo"></a>
+        <div class="footer-top">
+            <div class="footer-left">
+                <a href="#header"><img class="logo" src="./../../../../assets/img/logo.png" alt="Logo"></a>
+            </div>
+            <div class="footer-center">
+                <p>© Galina Antipin 2024</p>
+            </div>
+            <div class="footer-right">
+                <a href="https://github.com/galina-antipin" target="_blank" rel="noopener noreferrer">
+                    <img src='./../../../../assets/img/github-icon-white.png' alt="GitHub" />
+                </a>
+                <a href="https://www.linkedin.com/in/galina-antipin-15157532b/" target="_blank"
+                    rel="noopener noreferrer">
+                    <img src='./../../../../assets/img/linkedin-icon-white.png' alt="LinkedIn" />
+                </a>
+                <a href="#contact">
+                    <img src='./../../../../assets/img/mail-icon-white.png' alt="Email" />
+                </a>
+            </div>
         </div>
-        <div class="footer-center">
-            <p>© Galina Antipin 2024</p>
-            <a routerLink="imprint">Imprint</a>
-        </div>
-        <div class="footer-right">
-            <a href="https://github.com/galina-antipin" target="_blank" rel="noopener noreferrer">
-                <img src='./../../../../assets/img/github-icon-white.png' alt="GitHub" />
-            </a>
-            <a href="https://www.linkedin.com/in/galina-antipin-15157532b/" target="_blank" rel="noopener noreferrer">
-                <img src='./../../../../assets/img/linkedin-icon-white.png' alt="LinkedIn" />
-            </a>
-            <a href="#contact">
-                <img src='./../../../../assets/img/mail-icon-white.png' alt="Email" />
-            </a>
-        </div>
+        <div class="footer-bottom"><a routerLink="imprint">Imprint</a></div>
     </div>
 </footer>
