--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -22,15 +22,29 @@ footer {
     margin-left: 8%;
     margin-right: 8%;
     display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+}
+
+.footer-top {
+    display: flex;
     align-items: center;
     justify-content: space-between;
-    text-align: center;
-    padding-top: 50px;
-    width: 100%;
+}
+
+.footer-bottom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    a {
+        margin-right: 70px;
+    }
 }
 
 .footer-right img {
-    margin-left: 30px;
+    padding: 15px;
     transition: transform 0.3s;
     cursor: pointer;
 
@@ -39,19 +53,47 @@ footer {
     }
 }
 
-.footer-center {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 p {
     font-size: 1.4375rem;
     font-family: 'Montserrat';
-    margin-bottom: 10%;
-    padding-top: 15%;
 }
 
 .logo {
     width: 120px;
+}
+
+@media (max-width: 851px) {
+    p {
+        font-size: 1.1rem;
+    }
+}
+
+@media(max-width:720px) {
+    .footer-top{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .footer-content {
+        margin-left: 3%;
+        margin-right: 3% ;
+    }
+
+    .footer-center {
+        padding-bottom: 10px;
+    }
+
+    .footer-right img {
+        margin-left: 0px;
+        padding: 10px;
+    }
+
+    .logo {
+        width: 100px;
+    }
+
+    .footer-bottom a {
+        margin-right: 0;
+    }
 }
