--- a/src/app/main-content/my-work/my-work.component.scss
+++ b/src/app/main-content/my-work/my-work.component.scss
@@ -22,6 +22,26 @@ section {
     margin-bottom: 5%;
 }
 
+h1 {
+    font-family: 'Baloo 2';
+    color: #5988FF;
+    font-size: 6rem;
+    margin-bottom: 2%;
+}
+
+h2 {
+    font-family: 'Montserrat';
+    font-size: 1.375rem;
+    font-weight: 400;
+}
+
+h3 {
+    color: #5988FF;
+    font-size: 1.375rem;
+    font-weight: 400;
+    font-family: 'Montserrat';
+}
+
 p {
     color: #5988FF;
     font-size: 2rem;
@@ -60,21 +80,8 @@ span {
     flex-direction: column;
     width: 50%;
     align-items: flex-start;
-    justify-content:flex-end;
+    justify-content: flex-end;
     padding-left: 50px;
-}
-
-h2 {
-    font-family: 'Montserrat';
-    font-size: 1.375rem;
-    font-weight: 400;
-}
-
-h3 {
-    color: #5988FF;
-    font-size: 1.375rem;
-    font-weight: 600;
-    font-family: 'Montserrat';
 }
 
 .button-section {
@@ -88,7 +95,7 @@ h3 {
     width: 50%;
     transition: transform 0.2s ease;
     padding-right: 50px;
-    
+
     &:hover {
         transform: scale(1.2);
         cursor: pointer;
@@ -100,17 +107,11 @@ h3 {
     padding: 20px;
 }
 
-h1 {
-    font-family: 'Baloo 2';
-    color: #5988FF;
-    font-size: 6rem;
-    margin-bottom: 2%;
-}
-
 img {
     border-radius: 10px;
     width: 100%;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    height: auto;
 }
 
 .middle-container {
@@ -128,5 +129,123 @@ img {
 
     .button-section {
         justify-content: flex-end
+    }
+}
+
+@media(max-width:1054px) {
+
+    .portfolio-headline {
+        width: 80%;
+        margin-bottom: 10%;
+    }
+
+    p {
+        font-size: 1.5rem;
+    }
+
+    h3 {
+        font-size: 1rem;
+    }
+
+    span {
+        font-size: 1rem;
+    }
+
+    button {
+        font-size: 1rem;
+    }
+}
+
+@media(max-width:900px){
+
+    .portfolio-wrapper.reverse, .middle-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-direction: column-reverse;
+        margin-bottom: 10%;
+        padding-left: 0;
+        padding-right: 0 !important;
+        text-align: center !important;
+    }
+
+    .description-content{
+        width: 100%;
+        padding-left: 0;
+        display: flex;
+        align-items: center !important;
+        margin-top: 3%;
+        padding-right: 0 !important;
+        text-align: center !important;
+        margin-bottom: 12%;
+
+        span{
+            width: 100%;
+        }
+    }
+
+    .project-content {
+        width: 100%;
+        padding-right: 0;
+        padding-left: 0 !important;
+        align-items: center;
+    }
+
+    p {
+        font-size: 3.5rem;
+    }
+
+    h3 {
+        font-size: 1.5rem;
+        margin-bottom: 3%;
+    }
+
+    span {
+        font-size: 1.25rem;
+    }
+
+    .button-section {
+        justify-content: center !important;
+    }
+
+    button {
+        font-size: 1.5rem;
+    }
+}
+
+@media(max-width:600px){
+
+    h1 {
+        font-size: 4rem;
+    }
+
+    h2 {
+        font-size: 1.2rem;
+    }
+
+    p {
+        font-size: 2.5rem;
+    }
+
+    .portfolio-headline {
+        width: 100%;
+    }
+}
+
+@media (max-width:400px) {
+    h3 {
+        font-size: 1.2rem 
+    }
+
+    span {
+        font-size: 1rem;
+    }
+
+    button {
+        font-size: 1.2rem;
+    }
+
+    h2 {
+        font-size: 1rem;
     }
 }
