implimented translation in landingpage component

--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -5,12 +5,12 @@
             <div class="circle"></div>
         </div>
         <div class="right-content">
-            <span>Hello! I am Galina</span>
+            <span>{{ 'LANDING_PAGE.HELLO' | translate }}</span>
             <div class="frontend-wrapper">
-                <h1 class="first">FRONTEND</h1>
-                <h1>DEVELOPER</h1>
+                <h1 class="first">{{ 'LANDING_PAGE.FRONTEND' | translate }}</h1>
+                <h1>{{ 'LANDING_PAGE.DEVELOPER' | translate }}</h1>
             </div>
-            <span class="scroll-span">SCROLL</span>
+            <span class="scroll-span">{{ 'LANDING_PAGE.SCROLL' | translate }}</span>
             <div class="scroll-down-line"></div>
             <div class="icon-wrapper">
                 <a href="https://github.com/galina-antipin" target="_blank" rel="noopener noreferrer">
