implimented translation in about me section

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -2,31 +2,26 @@
     <div class="content-wrapper">
         <div class="left-content">
             <div class="headline">
-                <h1 class="white-space-nowrap">Let's work</h1>
-                <h1>together</h1>
-                <h2>I am</h2>
+                <h1 class="white-space-nowrap">{{ 'WORK_TOGETHER.LET_WORK' | translate }}</h1>
+                <h1>{{ 'WORK_TOGETHER.TOGETHER' | translate }}</h1>
+                <h2>{{ 'WORK_TOGETHER.I_AM' | translate }}</h2>
             </div>
             <div class="icons-section">
-                <div> <img src="./../../../assets/img/location-icon.png" alt="Location Icon">
-                    <span>located in Thuringia</span>
+                <div> 
+                    <img src="./../../../assets/img/location-icon.png" alt="Location Icon">
+                    <span>{{ 'WORK_TOGETHER.LOCATION' | translate }}</span>
                 </div>
-                <div> <img src="./../../../assets/img/remote-icon.png" alt="Remote Icon">
-                    <span>open to work remote</span>
+                <div> 
+                    <img src="./../../../assets/img/remote-icon.png" alt="Remote Icon">
+                    <span>{{ 'WORK_TOGETHER.REMOTE' | translate }}</span>
                 </div>
             </div>
         </div>
         <div class="right-content">
             <div class="text-content">
-                <span> Hi, I'm a Frontend Developer based near Erfurt. I'm driven by the endless
-                    possibilities in
-                    IT, and
-                    I'm passionate about creating visually stunning and user-friendly websites and applications. <br>My
-                    ability
-                    to
-                    solve complex problems and my passion for programming make me a valuable member for your team.
-                    <br> <br>
-                    If you think I’d be a good match for your projects, contact me!</span>
-                <a href="#contact"><button>Send a message</button></a>
+                <span>{{ 'WORK_TOGETHER.INTRO' | translate }}</span><br>
+                <span>{{ 'WORK_TOGETHER.CONTACT_MESSAGE' | translate }}</span>
+                <a href="#contact"><button>{{ 'WORK_TOGETHER.SEND_MESSAGE' | translate }}</button></a>
             </div>
         </div>
     </div>
