--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -1,49 +1,51 @@
 <section>
     <div class="contact-wrapper">
         <div class="header">
-            <h1>Contact</h1>
+            <h1>{{ 'CONTACT.TITLE' | translate }}</h1>
         </div>
         <div class="content">
             <div class="left-content">
-                <h2>Got a problem to solve?</h2> <br><br>
-                <p>Contact me through this form, I am interested in hearing from you, knowing your ideas and
-                    contributing to your projects with my work.
-                </p> <br>
-                <h3>Need a Frontend developer? <b>Contact me!</b></h3>
+                <h2>{{ 'CONTACT.PROBLEM' | translate }}</h2>
+                <br><br>
+                <p>{{ 'CONTACT.INTRO' | translate }}</p>
+                <br>
+                <h3>{{ 'CONTACT.NEED_DEV' | translate }} <b>{{ 'CONTACT.CONTACT_ME' | translate }}</b></h3>
+
                 <!-- <a href="#header"> <img src="./../../../assets/img/arrow-top-icon.png" alt="Arrow top">
                 </a> -->
             </div>
             <form (ngSubmit)="onSubmit(contactForm)" #contactForm="ngForm">
                 <input #name="ngModel" [(ngModel)]="contactData.name" name="name" type="text" id="name"
-                    placeholder="Your name" required [ngClass]="{'invalid': !name.valid && name.touched}">
-                @if (!name.valid && name.touched) {
-                <span>Your name is required</span>
-                }
+                    placeholder="{{ 'CONTACT.NAME_PLACEHOLDER' | translate }}" required
+                    [ngClass]="{'invalid': !name.valid && name.touched}">
+                <span *ngIf="!name.valid && name.touched">{{ 'CONTACT.NAME_REQUIRED' | translate }}</span>
+
                 <input #email="ngModel" [(ngModel)]="contactData.email" name="email" type="email"
-                    placeholder="Your email" required pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
+                    placeholder="{{ 'CONTACT.EMAIL_PLACEHOLDER' | translate }}" required
+                    pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
                     [ngClass]="{'invalid': !email.valid && email.touched}">
-                @if (!email.valid && email.touched) {
-                <span>Your email is required</span>
-                }
+                <span *ngIf="!email.valid && email.touched">{{ 'CONTACT.EMAIL_REQUIRED' | translate }}</span>
+
                 <textarea #message="ngModel" [(ngModel)]="contactData.message" name="message" id="message"
-                    placeholder="Your message" required
+                    placeholder="{{ 'CONTACT.MESSAGE_PLACEHOLDER' | translate }}" required
                     [ngClass]="{'invalid': !message.valid && message.touched}"></textarea>
-                @if (!message.valid && message.touched) {
-                <span>Your message is empty</span>
-                }
+                <span *ngIf="!message.valid && message.touched">{{ 'CONTACT.MESSAGE_EMPTY' | translate }}</span>
+
                 <div class="checkbox-wrapper">
                     <input type="checkbox" [(ngModel)]="contactData.acceptPolicy" name="privacy" required />
-                    <label for="privacy">I've read the <a routerLink="privacy-policy">privacy policy</a> and agree to
-                        the
-                        processing of my data as outlined.</label>
+                    <label for="privacy">
+                        {{ 'CONTACT.PRIVACY_READ' | translate }}
+                        <a routerLink="privacy-policy">{{ 'CONTACT.PRIVACY_POLICY' | translate }}</a>
+                        {{ 'CONTACT.PRIVACY_AGREE' | translate }}
+                    </label>
                 </div>
-                @if (contactForm.submitted && !contactData.acceptPolicy){ <span class="error" [ngClass]="{'invalid': !message.valid}">Please accept the privacy
-                    policy.</span>}
-               
-                    <button class="send-button" type="submit" 
-                    [ngClass]="{'active': !message.valid && message.touched}">
-                {{ buttonText }}
-            </button>
+
+                <span *ngIf="contactForm.submitted && !contactData.acceptPolicy">{{ 'CONTACT.ACCEPT_PRIVACY' | translate
+                    }}</span>
+
+                <button class="send-button" type="submit" [ngClass]="{'active': !message.valid && message.touched}">
+                    {{ buttonText }}
+                </button>
             </form>
         </div>
     </div>
