--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -20,6 +20,6 @@
                 </a>
             </div>
         </div>
-        <div class="footer-bottom"><a routerLink="imprint">Imprint</a></div>
+        <a routerLink="imprint">{{ 'FOOTER.IMPRINT' | translate }}</a>
     </div>
 </footer>
