--- a/src/app/imprint/imprint.component.html
+++ b/src/app/imprint/imprint.component.html
@@ -1,6 +1,6 @@
 <section id="imprint">
     <div class="wrapper">
-        <h2>Impressum</h2>
+        <h2>{{ 'IMPRINT.TITLE' | translate }}</h2>
         <br>
         <span>Galina Antipin</span>
         <span>Schachtstraße 20</span>
