translated the headline of privacy policy

--- a/src/app/privacy-policy/privacy-policy.component.html
+++ b/src/app/privacy-policy/privacy-policy.component.html
@@ -1,6 +1,6 @@
 <section id="privacy-policy">
     <div class="wrapper">
-        <h2>Datenschutz­erklärung</h2>
+        <h2>{{ 'PRIVACY_POLICY.TITLE' | translate }}</h2>
         <h3>1. Datenschutz auf einen Blick</h3>
         <br>
         <h3>Allgemeine Hinweise</h3>
