--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -24,4 +24,53 @@ section {
     margin-left: 8%;
     margin-right: 8%;
     margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+@media (max-width: 850px) {
+    .wrapper {
+        margin-left: 3%;
+        margin-right: 3%;
+    }
+
+    h2 {
+        font-size: 4rem !important;
+    }
+
+    h3 {
+        font-size: 1.1rem;
+    }
+}
+
+@media (max-width: 725px) {
+    .wrapper {
+        margin-left: 3%;
+        margin-right: 3%;
+    }
+
+    h2 {
+        font-size: 3rem !important;
+    }
+
+    span {
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 544px) {
+
+    h2 {
+        font-size: 2rem !important;
+    }
+
+    span {
+        font-size: 0.8rem;
+    }
+}
+
+@media (max-width: 367px) {
+
+    h2 {
+        font-size: 1.5rem !important;
+    }
 }
