--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -7,6 +7,10 @@ section {
     justify-content: center;
 }
 
+.d-none {
+    display: none;
+}
+
 h1 {
     font-family: 'Baloo 2';
     font-weight: 800;
@@ -77,23 +81,153 @@ span {
 
 .profile-image {
     position: absolute;
-    top: 55%; 
+    top: 55%;
     left: 20%;
     transform: translate(-50%, -50%);
     height: 90vh;
-    z-index: 1; 
+    z-index: 1;
 }
 
 .circle {
-    position: absolute; 
+    position: absolute;
     border-radius: 60%;
-    background: radial-gradient(circle, #5988FF, #0043F0); 
-    opacity: 0.8; 
+    background: radial-gradient(circle, #5988FF, #0043F0);
+    opacity: 0.8;
     height: 110%;
     width: 60%;
     top: -20%;
-    left: -20%; 
-    z-index: 0; 
+    left: -20%;
+    z-index: 0;
 }
 
+@media(max-width:1650px) {
+    h1 {
+        font-size: 7rem;
+    }
 
+    .first {
+        font-size: 8rem;
+    }
+
+    span {
+        font-size: 3.8rem;
+    }
+
+    .circle {
+        opacity: 0.2;
+    }
+}
+
+@media(max-width:1290px) {
+    h1 {
+        font-size: 6rem;
+    }
+
+    .first {
+        font-size: 5rem;
+    }
+
+    span {
+        font-size: 3rem;
+    }
+
+
+    .profile-image {
+        top: 65%;
+        height: 70vh;
+    }
+}
+
+@media(max-width:1045px) {
+    h1 {
+        font-size: 7rem;
+    }
+
+    .first {
+        font-size: 6rem;
+    }
+
+    span {
+        font-size: 3.5rem;
+    }
+
+    .profile-image {
+        top: 70%;
+        height: 60vh;
+        left: 25%;
+    }
+
+    .circle {
+        height: 110%;
+        width: 100%;
+        top: -20%;
+        left: -20%;
+    }
+
+    .content-wrapper {
+        margin-left: 8%;
+        margin-right: 8%;
+        max-width: 1920px;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
+    .right-content {
+        margin-top: 5%;
+    }
+
+    .scroll-span,
+    .scroll-down-line {
+        display: none;
+    }
+
+    .scroll-down {
+        position: absolute;
+        right: -10%;
+        top: 78%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .scroll-down span {
+        writing-mode: vertical-rl;
+        transform: rotate(360deg);
+        color: #5988FF;
+        font-size: 1.5rem;
+    }
+}
+
+@media(max-width:934px) {
+
+    .scroll-span,
+    .scroll-down-line,
+    .icon-wrapper {
+        display: none;
+    }
+
+    .scroll-down {
+        position: absolute;
+        right: -5%;
+        top: 78%;
+    }
+}
+
+@media(max-width:934px) {
+    .scroll-down {
+        position: absolute;
+        right: 0%;
+        top: 78%;
+    }
+
+    
+}
+
+@media(max-width:746px) {
+    .scroll-down {
+        position: absolute;
+        right: 0%;
+        top: 78%;
+    }
+}
