--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -23,10 +23,10 @@
                     <img src="./../../../assets/img/linkedin-icon.png" alt="LinkedIn Icon">
                 </a>
             </div>
-            <div class="scroll-down d-none">
+            <!-- <div class="scroll-down d-none">
                 <span>{{ 'LANDING_PAGE.SCROLL_RESP' | translate }}</span>
                 <img src="./../../../assets/img/arrow-down-line.png" alt="arrow down">
-            </div>
+            </div> -->
         </div>
     </div>
 </section>
