--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -158,10 +158,10 @@ span {
     }
 
     .circle {
-        height: 110%;
-        width: 100%;
+        height: 80%;
+        width: 150%;
         top: -20%;
-        left: -20%;
+        left: -50%;
     }
 
     .content-wrapper {
@@ -178,7 +178,8 @@ span {
     }
 
     .scroll-span,
-    .scroll-down-line {
+    .scroll-down-line,
+    .icon-wrapper {
         display: none;
     }
 
@@ -199,35 +200,156 @@ span {
     }
 }
 
-@media(max-width:934px) {
+@media(max-width:818px) {
 
-    .scroll-span,
-    .scroll-down-line,
-    .icon-wrapper {
-        display: none;
+    h1 {
+        font-size: 6rem;
     }
 
-    .scroll-down {
-        position: absolute;
-        right: -5%;
-        top: 78%;
+    .first {
+        font-size: 5rem;
+    }
+
+    span {
+        font-size: 3rem;
+    }
+
+    // .scroll-down {
+    //     position: absolute;
+    //     right: -5%;
+    //     top: 78%;
+    // }
+}
+
+@media(max-width:704px) {
+
+    h1 {
+        font-size: 5rem;
+    }
+
+    .first {
+        font-size: 4rem;
+    }
+
+    span {
+        font-size: 2.5rem;
+    }
+
+    .profile-image {
+        top: 65%;
+        height: 70vh;
+        left: 45%;
+    }
+
+    // .scroll-down {
+    //     position: absolute;
+    //     right: 0%;
+    //     top: 78%;
+    // }
+}
+
+@media(max-width:586px) {
+    h1 {
+        font-size: 4rem;
+    }
+
+    .first {
+        font-size: 3rem;
+    }
+
+    span {
+        font-size: 2rem;
+    }
+
+    .content-wrapper {
+        margin-left: 0%;
+        margin-right: 0%;
     }
 }
 
-@media(max-width:934px) {
-    .scroll-down {
-        position: absolute;
-        right: 0%;
-        top: 78%;
+// .scroll-down {
+//     position: absolute;
+//     right: 0%;
+//     top: 78%;
+// }
+
+
+@media(max-width:481px) {
+    h1 {
+        font-size: 4rem;
     }
 
-    
+    .first {
+        font-size: 3rem;
+    }
+
+    span {
+        font-size: 2rem;
+    }
+
+    .profile-image {
+        top: 70%;
+        height: 60vh;
+        left: 45%;
+    }
+
+    .right-content {
+        margin-top: 20%;
+    }
+
+    // .scroll-down {
+    //     position: absolute;
+    //     right: 0%;
+    //     top: 78%;
+    // }
 }
 
-@media(max-width:746px) {
-    .scroll-down {
-        position: absolute;
-        right: 0%;
-        top: 78%;
+@media(max-width:460px) {
+    h1 {
+        font-size: 3rem;
+    }
+
+    .first {
+        font-size: 2rem;
+    }
+
+    span {
+        font-size: 1rem;
+    }
+
+    .profile-image {
+        top: 75%;
+        height: 50vh;
+        left: 45%;
+    }
+
+    .right-content {
+        margin-top: 20%;
     }
 }
+
+@media(max-width:400px) {
+    .profile-image {
+        top: 76%;
+        height: 50vh;
+        left: 50%;
+    }
+
+    .right-content {
+        margin-top: 20%;
+    }
+
+    h1 {
+        font-size: 2rem;
+    }
+
+    .first {
+        font-size: 2rem;
+    }
+
+    span {
+        font-size: 1rem;
+    }
+
+}
+
