responsive menu scss

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div id="app"><app-header></app-header>
     <div><router-outlet></router-outlet></div>
+    <app-responsive-menu></app-responsive-menu>
     <app-footer></app-footer>
 </div>
