--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -2,7 +2,7 @@
     <div class="content-wrapper">
         <div class="left-content">
             <img src="./../../../assets/img/G Farb w (1).png" alt="My Foto" class="profile-image">
-            <div class="circle"></div>
+            <!-- <div class="circle"></div> -->
         </div>
         <div class="right-content">
             <span>{{ 'LANDING_PAGE.HELLO' | translate }}</span>
