--- a/src/app/shared/components/responsive-menu/responsive-menu.component.html
+++ b/src/app/shared/components/responsive-menu/responsive-menu.component.html
@@ -1,17 +1,17 @@
-<section id="responsive-menu">
+@if (isOpen){<section id="responsive-menu">
     <div class="menu-wrapper">
         <header> <img class="logo" src="./../../../../assets/img/logo.png" alt="Logo">
-            <img class="close-btn" src="./../../../../assets/img/close-icon.png" alt="Close Icon">
+            <img class="close-btn" src="./../../../../assets/img/close-icon.png" alt="Close Icon" (click)="closeMenu()">
         </header>
 
         <div class="hamburger-menu">
-            <a href="#about-me">{{ 'MENU.ABOUT_ME' | translate }}</a>
-            <a href="#skills">{{ 'MENU.SKILLS' | translate }}</a>
-            <a href="#my-work">{{ 'MENU.MY_WORK' | translate }}</a>
-            <a href="#contact">{{ 'MENU.CONTACT' | translate }}</a>
+            <a href="#about-me" (click)="closeMenu()">{{ 'MENU.ABOUT_ME' | translate }}</a>
+            <a href="#skills" (click)="closeMenu()">{{ 'MENU.SKILLS' | translate }}</a>
+            <a href="#my-work" (click)="closeMenu()">{{ 'MENU.MY_WORK' | translate }}</a>
+            <a href="#contact" (click)="closeMenu()">{{ 'MENU.CONTACT' | translate }}</a>
             <div class="translation-section"> <span (click)="translate.switchLanguage('de')">DE</span> |
                 <span (click)="translate.switchLanguage('en')">EN</span>
             </div>
         </div>
     </div>
-</section>
+</section>}
