--- a/src/app/shared/components/responsive-menu/responsive-menu.component.scss
+++ b/src/app/shared/components/responsive-menu/responsive-menu.component.scss
@@ -64,3 +64,17 @@ span {
     align-items: center;
 }
 
+@keyframes slide-in {
+    0% {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0);
+        opacity: 1; 
+    }
+}
+
+#responsive-menu {
+    animation: slide-in 0.4s ease forwards; 
+}
