added responsive scss landing page

--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -38,7 +38,7 @@ h2 {
     background-image: url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png');
     background-size: 12%, 5%;
     background-position: center -18%, bottom 5% right;
-    background-repeat: no-repeat, no-repeat;
+    background-repeat: no-repeat;
 }
 
 .left-content {
