--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="footer-content">
         <div class="footer-top">
             <div class="footer-left">
-                <a href="#header"><img class="logo" src="./../../../../assets/img/logo.png" alt="Logo"></a>
+                <a href="#header"><img class="logo" src="./../../../../assets/img/logo-white.png" alt="Logo"></a>
             </div>
             <div class="footer-center">
                 <p>© Galina Antipin 2024</p>
