--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -15,18 +15,18 @@
                 <input #name="ngModel" [(ngModel)]="contactData.name" name="name" type="text" id="name"
                     placeholder="{{ 'CONTACT.NAME_PLACEHOLDER' | translate }}" required
                     [ngClass]="{'invalid': !name.valid && name.touched}">
-                <span *ngIf="!name.valid && name.touched">{{ 'CONTACT.NAME_REQUIRED' | translate }}</span>
+                 @if(!name.valid && name.touched){<span>{{ 'CONTACT.NAME_REQUIRED' | translate }}</span>}
 
                 <input #email="ngModel" [(ngModel)]="contactData.email" name="email" type="email"
                     placeholder="{{ 'CONTACT.EMAIL_PLACEHOLDER' | translate }}" required
                     pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
                     [ngClass]="{'invalid': !email.valid && email.touched}">
-                <span *ngIf="!email.valid && email.touched">{{ 'CONTACT.EMAIL_REQUIRED' | translate }}</span>
+                 @if(!email.valid && email.touched){<span>{{ 'CONTACT.EMAIL_REQUIRED' | translate }}</span>}
 
                 <textarea #message="ngModel" [(ngModel)]="contactData.message" name="message" id="message"
                     placeholder="{{ 'CONTACT.MESSAGE_PLACEHOLDER' | translate }}" required
                     [ngClass]="{'invalid': !message.valid && message.touched}"></textarea>
-                <span *ngIf="!message.valid && message.touched">{{ 'CONTACT.MESSAGE_EMPTY' | translate }}</span>
+                 @if(!message.valid && message.touched){<span>{{ 'CONTACT.MESSAGE_EMPTY' | translate }}</span>}
 
                 <div class="checkbox-wrapper">
                     <input type="checkbox" [(ngModel)]="contactData.acceptPolicy" name="privacy" required />
@@ -37,8 +37,8 @@
                     </label>
                 </div>
 
-                <span *ngIf="contactForm.submitted && !contactData.acceptPolicy">{{ 'CONTACT.ACCEPT_PRIVACY' | translate
-                    }}</span>
+               @if(contactForm.submitted && !contactData.acceptPolicy){<span >{{ 'CONTACT.ACCEPT_PRIVACY' | translate
+                    }}</span>}
 
                 <button class="send-button" type="submit" [ngClass]="{'active': !message.valid && message.touched}">
                     {{ buttonText }}
