adited landing page html

--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -2,7 +2,6 @@
     <div class="content-wrapper">
         <div class="left-content">
             <img src="./../../../assets/img/G Farb w (1).png" alt="My Foto" class="profile-image">
-            <!-- <div class="circle"></div> -->
         </div>
         <div class="right-content">
             <span>{{ 'LANDING_PAGE.HELLO' | translate }}</span>
@@ -19,14 +18,12 @@
                 <a href="#contact">
                     <img src="./../../../assets/img/mail-icon.png" alt="E-Mail Icon">
                 </a>
-                <a href="https://www.linkedin.com/in/galina-antipin-15157532b/" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.linkedin.com/in/galina-antipin-15157532b/" target="_blank"
+                    rel="noopener noreferrer">
                     <img src="./../../../assets/img/linkedin-icon.png" alt="LinkedIn Icon">
                 </a>
             </div>
-            <!-- <div class="scroll-down d-none">
-                <span>{{ 'LANDING_PAGE.SCROLL_RESP' | translate }}</span>
-                <img src="./../../../assets/img/arrow-down-line.png" alt="arrow down">
-            </div> -->
+
         </div>
     </div>
 </section>
