--- a/src/app/main-content/landing-page/landing-page.component.scss
+++ b/src/app/main-content/landing-page/landing-page.component.scss
@@ -9,6 +9,7 @@ section {
     background-size: 60%;
     background-position: -40% 20%;
     background-repeat: no-repeat;
+    overflow: hidden;
 }
 
 .d-none {
@@ -95,18 +96,6 @@ span {
     transform: translate(-50%, -50%);
     height: 90vh;
     z-index: 1;
-}
-
-.circle {
-    position: absolute;
-    border-radius: 60%;
-    background: radial-gradient(circle, #5988FF, #0043F0);
-    opacity: 0.8;
-    height: 110%;
-    width: 60%;
-    top: -20%;
-    left: -20%;
-    z-index: 0;
 }
 
 @media(max-width:1650px) {
