--- a/src/app/main-content/my-work/my-work.component.scss
+++ b/src/app/main-content/my-work/my-work.component.scss
@@ -132,6 +132,20 @@ img {
     }
 }
 
+@media(max-width:1669px){
+    section {
+        background-image: url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png');
+        background-size: 2%, 25%, 20%, 10%, 6%;
+        background-position:
+            30% 1.5%,
+            120% 50%,
+            -10% 40%,
+            90% 15%,
+            90% 99%;
+        background-repeat: no-repeat;
+    }
+}
+
 @media(max-width:1054px) {
 
     .portfolio-headline {
@@ -167,6 +181,23 @@ img {
         padding-left: 0;
         padding-right: 0 !important;
         text-align: center !important;
+    }
+
+    section {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        padding-top: 6%;
+        position: relative;
+        background-image: url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png');
+        background-size: 8%, 25%, 20%, 10%, 6%;
+        background-position:
+            90% 5%,
+            120% 50%,
+            -10% 40%,
+            90% 15%,
+            90% 99%;
+        background-repeat: no-repeat;
     }
 
     .description-content{
@@ -229,6 +260,22 @@ img {
 
     .portfolio-headline {
         width: 100%;
+    }
+
+    section {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        padding-top: 6%;
+        position: relative;
+        background-image: url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png'), url('./../../../assets/img/circle.png');
+        background-size: 25%, 20%, 10%, 6%;
+        background-position:
+            120% 50%,
+            -10% 40%,
+            90% 15%,
+            90% 99%;
+        background-repeat: no-repeat;
     }
 }
 
