added a new function scrolltotop in privacy policy component.ts

--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -32,7 +32,7 @@
                     <input type="checkbox" [(ngModel)]="contactData.acceptPolicy" name="privacy" required />
                     <label for="privacy">
                         {{ 'CONTACT.PRIVACY_READ' | translate }}
-                        <a routerLink="privacy-policy">{{ 'CONTACT.PRIVACY_POLICY' | translate }}</a>
+                        <a routerLink="/privacy-policy">{{ 'CONTACT.PRIVACY_POLICY' | translate }}</a>
                         {{ 'CONTACT.PRIVACY_AGREE' | translate }}
                     </label>
                 </div>
