fixed focus border line on inputfields

--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -95,6 +95,7 @@ textarea {
     padding: 10px;
     margin-bottom: 20px;
     color: black;
+    outline: none;
 
     &:hover {
         border: 2px solid #5988FF;
